--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,9 @@
     "apollo-client": "^2.5.1",
     "apollo-link": "^1.2.13",
     "apollo-link-error": "^1.1.12",
-    "apollo-link-ws": "^1.0.19",
     "apollo-upload-client": "^10.0.0",
-    "apollo-utilities": "^1.3.2",
-    "graphql": "^14.2.0",
     "graphql-tag": "^2.10.1",
     "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
@@ -24,10 +20,11 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "styled-components": "^4.2.0",
-    "subscriptions-transport-ws": "^0.9.16"
+    "graphql": "^14.2.0",
+    "lodash": "^4.17.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8888 react-scripts start --REACT_APP_API_URL=http://localhost:4000/graphql",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
